TEST: moving TestingHelper to a separate library

--- a/Examples/Fusion/CMakeLists.txt
+++ b/Examples/Fusion/CMakeLists.txt
@@ -39,12 +39,12 @@ ADD_TEST(BayesianFusionImageFilterTest ${EXE_TESTS}
 	0.9999
 )
 
-ADD_TEST(PanSharpeningExampleTest ${EXE_TESTS} 
+ADD_TEST(PanSharpeningExampleTest ${EXE_TESTS}
     --compare-image ${EPSILON}  ${BASELINE}/PanSharpeningExampleTest.tif
                            ${TEMP}/PanSharpeningExampleTest.tif
         PanSharpeningExampleTest
 	${INPUTDATA}/QB_Toulouse_Ortho_PAN.tif
-	${INPUTDATA}/QB_Toulouse_Ortho_XS.tif 
+	${INPUTDATA}/QB_Toulouse_Ortho_XS.tif
 	${TEMP}/PanSharpeningExampleTest.tif
 	${TEMP}/PanSharpeningExampleTest1.png
 	${TEMP}/PanSharpeningExampleTest2.png
@@ -53,6 +53,6 @@ ADD_TEST(PanSharpeningExampleTest ${EXE_TESTS}
 
 
 ADD_EXECUTABLE(otbFusionExamplesTests otbFusionExamplesTests.cxx)
-TARGET_LINK_LIBRARIES(otbFusionExamplesTests  ITKAlgorithms ITKStatistics ITKNumerics OTBBasicFilters OTBCommon OTBDisparityMap OTBIO OTBSpatialReasoning OTBChangeDetection OTBFeatureExtraction  OTBLearning  OTBMultiScale OTBFusion)
+TARGET_LINK_LIBRARIES(otbFusionExamplesTests  ITKAlgorithms ITKStatistics ITKNumerics OTBBasicFilters OTBCommon OTBDisparityMap OTBIO OTBSpatialReasoning OTBChangeDetection OTBFeatureExtraction  OTBLearning  OTBMultiScale OTBFusion OTBTesting)
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
