--- a/Testing/Code/CMakeLists.txt
+++ b/Testing/Code/CMakeLists.txt
@@ -1,14 +1,14 @@
 # $Id$
 
 SUBDIRS(
-Common 
-IO 
-BasicFilters 
-FeatureExtraction 
-ChangeDetection 
-Learning 
-MultiScale 
-DisparityMap 
+Common
+IO
+BasicFilters
+FeatureExtraction
+ChangeDetection
+Learning
+MultiScale
+DisparityMap
 SpatialReasoning
 Projections
 Radiometry
@@ -24,3 +24,5 @@ ENDIF(OTB_USE_VISU_GUI)
 IF(OTB_USE_PQXX)
         SUBDIRS(GISFilters)
 ENDIF(OTB_USE_PQXX)
+
+ADD_LIBRARY(OTBTesting otbTestHelper.cxx)
