--- a/Testing/Code/GISFilters/CMakeLists.txt
+++ b/Testing/Code/GISFilters/CMakeLists.txt
@@ -1,4 +1,4 @@
- 
+
 IF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
 SET(BASELINE ${OTB_DATA_ROOT}/Baseline/OTB/Images)
 SET(BASELINE_FILES ${OTB_DATA_ROOT}/Baseline/OTB/Files)
@@ -47,6 +47,6 @@ INCLUDE_DIRECTORIES("${OTBTesting_BINARY_DIR}")
 # ${TIFF_LIBRARY}
 
 ADD_EXECUTABLE(otbGISFiltersTests otbGISFiltersTests.cxx ${GISFilters_SRCS})
-TARGET_LINK_LIBRARIES(otbGISFiltersTests OTBCommon OTBGISFilters OTBIO)
+TARGET_LINK_LIBRARIES(otbGISFiltersTests OTBCommon OTBGISFilters OTBTesting)
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
