--- a/Testing/Code/Radiometry/CMakeLists.txt
+++ b/Testing/Code/Radiometry/CMakeLists.txt
@@ -1023,20 +1023,20 @@ otbNDWIWaterIndexImageFilter.cxx
 INCLUDE_DIRECTORIES("${OTBTesting_BINARY_DIR}")
 
 ADD_EXECUTABLE(otbRadiometryTests1 otbRadiometryTests1.cxx ${Radiometry_SRCS1})
-TARGET_LINK_LIBRARIES(otbRadiometryTests1 OTBRadiometry OTBIO)
+TARGET_LINK_LIBRARIES(otbRadiometryTests1 OTBRadiometry OTBIO OTBTesting)
 ADD_EXECUTABLE(otbRadiometryTests2 otbRadiometryTests2.cxx ${Radiometry_SRCS2})
-TARGET_LINK_LIBRARIES(otbRadiometryTests2 OTBRadiometry OTBIO)
+TARGET_LINK_LIBRARIES(otbRadiometryTests2 OTBRadiometry OTBIO OTBTesting)
 ADD_EXECUTABLE(otbRadiometryTests3 otbRadiometryTests3.cxx ${Radiometry_SRCS3})
-TARGET_LINK_LIBRARIES(otbRadiometryTests3 OTBRadiometry OTBIO)
+TARGET_LINK_LIBRARIES(otbRadiometryTests3 OTBRadiometry OTBIO OTBTesting)
 ADD_EXECUTABLE(otbRadiometryTests4 otbRadiometryTests4.cxx ${Radiometry_SRCS4})
-TARGET_LINK_LIBRARIES(otbRadiometryTests4 OTBRadiometry OTBIO)
+TARGET_LINK_LIBRARIES(otbRadiometryTests4 OTBRadiometry OTBIO OTBTesting)
 ADD_EXECUTABLE(otbRadiometryTests5 otbRadiometryTests5.cxx ${Radiometry_SRCS5})
-TARGET_LINK_LIBRARIES(otbRadiometryTests5 OTBRadiometry OTBIO)
+TARGET_LINK_LIBRARIES(otbRadiometryTests5 OTBRadiometry OTBIO OTBTesting)
 ADD_EXECUTABLE(otbRadiometryTests6 otbRadiometryTests6.cxx ${Radiometry_SRCS6})
-TARGET_LINK_LIBRARIES(otbRadiometryTests6 OTBRadiometry OTBIO)
+TARGET_LINK_LIBRARIES(otbRadiometryTests6 OTBRadiometry OTBIO OTBTesting)
 ADD_EXECUTABLE(otbRadiometryTests7 otbRadiometryTests7.cxx ${Radiometry_SRCS7})
-TARGET_LINK_LIBRARIES(otbRadiometryTests7 OTBRadiometry OTBIO)
+TARGET_LINK_LIBRARIES(otbRadiometryTests7 OTBRadiometry OTBIO OTBTesting)
 ADD_EXECUTABLE(otbRadiometryTests8 otbRadiometryTests8.cxx ${Radiometry_SRCS8})
-TARGET_LINK_LIBRARIES(otbRadiometryTests8 OTBRadiometry OTBIO)
+TARGET_LINK_LIBRARIES(otbRadiometryTests8 OTBRadiometry OTBIO OTBTesting)
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
