--- a/Testing/Code/SARPolarimetry/CMakeLists.txt
+++ b/Testing/Code/SARPolarimetry/CMakeLists.txt
@@ -18,15 +18,15 @@ SET(EPSILON_10e6 0.000001)
 SET(SARPOLARIMETRY_TESTS1 ${CXX_TEST_PATH}/otbSARPolarimetryTests1)
 
 
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ otbSARPolarimetry_TESTS1 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-ADD_TEST(rdTuPolarimetricSynthesisFilterNew ${SARPOLARIMETRY_TESTS1}  
+ADD_TEST(rdTuPolarimetricSynthesisFilterNew ${SARPOLARIMETRY_TESTS1}
         otbPolarimetricSynthesisFilterNew )
 
- # Normal Case 
+ # Normal Case
 ADD_TEST(rdTvPolarimetricSynthesisFilter ${SARPOLARIMETRY_TESTS1}
   --compare-image ${EPSILON}   ${BASELINE}/rdTvPolarimetricSynthesis.tif
                     ${TEMP}/resPolarimetricSynthesis_HH_VH_HV_VV.tif
@@ -34,14 +34,14 @@ ADD_TEST(rdTvPolarimetricSynthesisFilter ${SARPOLARIMETRY_TESTS1}
         ${INPUTDATA}/RSAT_imagery_HH.tif
         ${INPUTDATA}/RSAT_imagery_HV.tif
         ${INPUTDATA}/RSAT_imagery_VH.tif
-        ${INPUTDATA}/RSAT_imagery_VV.tif                        
+        ${INPUTDATA}/RSAT_imagery_VV.tif
         ${TEMP}/resPolarimetricSynthesis_HH_VH_HV_VV.tif
          32.0     # PsiI
          22.0     # KhiI
          58.0     # PsiR
          45.0     # KhiR
 	)
-        
+
  # With 3 channels
 ADD_TEST(rdTvHHnHVnVVPolarimetricSynthesisFilter ${SARPOLARIMETRY_TESTS1}
   --compare-image ${EPSILON}   ${BASELINE}/rdTvPolarimetricSynthesis_HH_HV_VV.tif
@@ -49,7 +49,7 @@ ADD_TEST(rdTvHHnHVnVVPolarimetricSynthesisFilter ${SARPOLARIMETRY_TESTS1}
         otbHHnHVnVVPolarimetricSynthesisFilter
         ${INPUTDATA}/RSAT_imagery_HH.tif
         ${INPUTDATA}/RSAT_imagery_HV.tif
-        ${INPUTDATA}/RSAT_imagery_VV.tif                        
+        ${INPUTDATA}/RSAT_imagery_VV.tif
         ${TEMP}/resPolarimetricSynthesis_HH_HV_VV.tif
          32.0
          22.0
@@ -70,7 +70,7 @@ ADD_TEST(rdTvHHnHVPolarimetricSynthesisFilter ${SARPOLARIMETRY_TESTS1}
          58.0
          45.0
 	)
-        
+
 # With VH and VV channels
 ADD_TEST(rdTvVHnVVPolarimetricSynthesisFilter ${SARPOLARIMETRY_TESTS1}
   --compare-image ${EPSILON}   ${BASELINE}/rdTvPolarimetricSynthesis_VH_VV.tif
@@ -83,13 +83,13 @@ ADD_TEST(rdTvVHnVVPolarimetricSynthesisFilter ${SARPOLARIMETRY_TESTS1}
          22.0
          58.0
          45.0
-	)             
-        
-ADD_TEST(rdTuMultiChannelsPolarimetricSynthesisFilterNew ${SARPOLARIMETRY_TESTS1}  
+	)
+
+ADD_TEST(rdTuMultiChannelsPolarimetricSynthesisFilterNew ${SARPOLARIMETRY_TESTS1}
         otbMultiChannelsPolarimetricSynthesisFilterNew
 	)
-            
-# With vector image HH, HV, VH and VV channels      
+
+# With vector image HH, HV, VH and VV channels
 IF(OTB_DATA_USE_LARGEINPUT)
 ADD_TEST(rdTvVectorMultiChannelsPolarimetricSynthesisFilter ${SARPOLARIMETRY_TESTS1}
  --compare-image ${EPSILON}   ${BASELINE}/rdTvMultiPolarimetricSynthesis1.tif
@@ -103,24 +103,24 @@ ADD_TEST(rdTvVectorMultiChannelsPolarimetricSynthesisFilter ${SARPOLARIMETRY_TES
          0.0     # KhiR
 	)
 ENDIF(OTB_DATA_USE_LARGEINPUT)
-        
-        
-# With 3 images HH, HV and VV channels turned into vectorImage      
-ADD_TEST(rdTvMultiChannelsPolarimetricSynthesisFilter ${SARPOLARIMETRY_TESTS1}  
+
+
+# With 3 images HH, HV and VV channels turned into vectorImage
+ADD_TEST(rdTvMultiChannelsPolarimetricSynthesisFilter ${SARPOLARIMETRY_TESTS1}
   --compare-image ${EPSILON}   ${BASELINE}/rdTvMultiPolarimetricSynthesis2.tif
                     ${TEMP}/resMultiPolarimetricSynthesis2.tif
         otbMultiChannelsPolarimetricSynthesisFilter
         ${INPUTDATA}/RSAT_imagery_HH.tif
         ${INPUTDATA}/RSAT_imagery_HV.tif
-        ${INPUTDATA}/RSAT_imagery_VV.tif        
+        ${INPUTDATA}/RSAT_imagery_VV.tif
         ${TEMP}/resMultiPolarimetricSynthesis2.tif
          32.0     # PsiI
          22.0     # KhiI
          58.0     # PsiR
          45.0     # KhiR
-	)        
-        
-        
+	)
+
+
 # A enrichir
 SET(SARPOLARIMETRY_SRCS1
 otbPolarimetricSynthesisFilterNew.cxx
@@ -138,7 +138,7 @@ otbVectorMultiChannelsPolarimetricSynthesisFilter.cxx
 INCLUDE_DIRECTORIES("${OTBTesting_BINARY_DIR}")
 
 ADD_EXECUTABLE(otbSARPolarimetryTests1 otbSARPolarimetryTests1.cxx ${SARPOLARIMETRY_SRCS1})
-TARGET_LINK_LIBRARIES(otbSARPolarimetryTests1 OTBSARPolarimetry OTBIO)
+TARGET_LINK_LIBRARIES(otbSARPolarimetryTests1 OTBSARPolarimetry OTBIO OTBTesting)
 
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
