--- a/Testing/Code/SpatialReasoning/CMakeLists.txt
+++ b/Testing/Code/SpatialReasoning/CMakeLists.txt
@@ -1,4 +1,4 @@
- 
+
 IF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
 
 SET(BASELINE ${OTB_DATA_ROOT}/Baseline/OTB/Images)
@@ -13,15 +13,15 @@ SET(TOL 0.0)
 SET(SPATIALREASONING_TESTS1 ${CXX_TEST_PATH}/otbSpatialReasoningTests1)
 SET(SPATIALREASONING_TESTS2 ${CXX_TEST_PATH}/otbSpatialReasoningTests2)
 
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ otbSPATIALREASONINGTests1 ~~~~~~~~~~~~~~~~~~~~~~
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # -------            otb::ImageToImageRCC8Calculator   ----------
 
-ADD_TEST(srTuRCC8CalculatorNew ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTuRCC8CalculatorNew ${SPATIALREASONING_TESTS1}
          otbImageToImageRCC8CalculatorNew)
 
-ADD_TEST(srTvRCC8Calculator ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTvRCC8Calculator ${SPATIALREASONING_TESTS1}
    --compare-ascii ${TOL}
  		   ${BASELINE_FILES}/srRCC8CalculatorOutput.txt
  		   ${TEMP}/srRCC8CalculatorOutput.txt
@@ -37,10 +37,10 @@ ADD_TEST(srTvRCC8Calculator ${SPATIALREASONING_TESTS1}
 
 # -------            otb::PolygonToPolygonRCC8Calculator   ----------
 
-ADD_TEST(srTuPolygonRCC8CalculatorNew ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTuPolygonRCC8CalculatorNew ${SPATIALREASONING_TESTS1}
          otbPolygonToPolygonRCC8CalculatorNew)
 
-ADD_TEST(srTvPolygonRCC8Calculator ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTvPolygonRCC8Calculator ${SPATIALREASONING_TESTS1}
    --compare-ascii ${TOL}
  		   ${BASELINE_FILES}/srRCC8PolygonToPolygonCalculatorOutput.txt
  		   ${TEMP}/srRCC8PolygonToPolygonCalculatorOutput.txt
@@ -55,10 +55,10 @@ ADD_TEST(srTvPolygonRCC8Calculator ${SPATIALREASONING_TESTS1}
 
 # -------            otb::RCC8VertexBase   --------------------------
 
-ADD_TEST(srTuRCC8VertexBaseNew ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTuRCC8VertexBaseNew ${SPATIALREASONING_TESTS1}
          otbRCC8VertexBaseNew)
 
-ADD_TEST(srTvRCC8VertexBase ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTvRCC8VertexBase ${SPATIALREASONING_TESTS1}
          otbRCC8VertexBase
 	 5
 	 5
@@ -66,10 +66,10 @@ ADD_TEST(srTvRCC8VertexBase ${SPATIALREASONING_TESTS1}
 
 # -------            otb::RCC8VertexWithCompacity----------------------
 
-ADD_TEST(srTuRCC8VertexWithCompacityNew ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTuRCC8VertexWithCompacityNew ${SPATIALREASONING_TESTS1}
          otbRCC8VertexWithCompacityNew)
 
-ADD_TEST(srTvRCC8VertexWithCompacity ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTvRCC8VertexWithCompacity ${SPATIALREASONING_TESTS1}
          otbRCC8VertexWithCompacity
 	 5
 	 5
@@ -78,38 +78,38 @@ ADD_TEST(srTvRCC8VertexWithCompacity ${SPATIALREASONING_TESTS1}
 
 # -------            otb::RCC8VertexWithCompacity----------------------
 
-ADD_TEST(srTuRCC8EdgeNew ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTuRCC8EdgeNew ${SPATIALREASONING_TESTS1}
          otbRCC8EdgeNew)
 
-ADD_TEST(srTvRCC8Edge ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTvRCC8Edge ${SPATIALREASONING_TESTS1}
          otbRCC8Edge
 	 )
- 
+
 
 # -------            otb::RCC8Graph   --------------------------
 # (also testing otb::RCC8VertexIterator and otb::RCC8EdgeIterator)
 
-ADD_TEST(srTuRCC8GraphNew ${SPATIALREASONING_TESTS1} 
+ADD_TEST(srTuRCC8GraphNew ${SPATIALREASONING_TESTS1}
          otbRCC8GraphNew)
 
-ADD_TEST(srTvRCC8Graph ${SPATIALREASONING_TESTS1} 
-         otbRCC8Graph	 
+ADD_TEST(srTvRCC8Graph ${SPATIALREASONING_TESTS1}
+         otbRCC8Graph
 	 )
 
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ otbSPATIALREASONINGTests2 ~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # -------            otb::RCC8GraphSource   --------------------------
 
-ADD_TEST(srTuRCC8GraphSourceNew ${SPATIALREASONING_TESTS2} 
+ADD_TEST(srTuRCC8GraphSourceNew ${SPATIALREASONING_TESTS2}
          otbRCC8GraphSourceNew)
 
 # -------        otb::RCC8GraphFileWriter   --------------------------
 
-ADD_TEST(srTuRCC8GraphFileWriterNew ${SPATIALREASONING_TESTS2} 
+ADD_TEST(srTuRCC8GraphFileWriterNew ${SPATIALREASONING_TESTS2}
          otbRCC8GraphFileWriterNew)
 
-ADD_TEST(srTvRCC8GraphFileWriter ${SPATIALREASONING_TESTS2} 
+ADD_TEST(srTvRCC8GraphFileWriter ${SPATIALREASONING_TESTS2}
 	--compare-ascii	${TOL}
 			${BASELINE_FILES}/srRCC8GraphWriterOutput1.dot
 			${TEMP}/srRCC8GraphWriterOutput1.dot
@@ -119,10 +119,10 @@ ADD_TEST(srTvRCC8GraphFileWriter ${SPATIALREASONING_TESTS2}
 
 # -------        otb::RCC8GraphFileReader   --------------------------
 
-ADD_TEST(srTuRCC8GraphFileReaderNew ${SPATIALREASONING_TESTS2} 
+ADD_TEST(srTuRCC8GraphFileReaderNew ${SPATIALREASONING_TESTS2}
          otbRCC8GraphFileReaderNew)
 
-ADD_TEST(srTvRCC8GraphFileReader ${SPATIALREASONING_TESTS2} 
+ADD_TEST(srTvRCC8GraphFileReader ${SPATIALREASONING_TESTS2}
 	 otbRCC8GraphFileReader
 			${TEMP}/srRCC8GraphWriterOutput1.dot
 )
@@ -140,13 +140,13 @@ ADD_TEST(srTvRCC8GraphIOEndToEnd ${SPATIALREASONING_TESTS2}
 
 
 
-ADD_TEST(srTuImageListToRCC8GraphFilterNew ${SPATIALREASONING_TESTS2} 
+ADD_TEST(srTuImageListToRCC8GraphFilterNew ${SPATIALREASONING_TESTS2}
          otbImageListToRCC8GraphFilterNew)
 
 
 # -------        otb::ImageMultiSegmentationToRCC8GraphFilter   --------------------------
 
-ADD_TEST(srTuMultiSegToRCC8GraphFilterNew ${SPATIALREASONING_TESTS2} 
+ADD_TEST(srTuMultiSegToRCC8GraphFilterNew ${SPATIALREASONING_TESTS2}
          otbImageMultiSegmentationToRCC8GraphFilterNew)
 
 
@@ -159,7 +159,7 @@ ADD_TEST(srTvMultiSegToRCC8GraphFilter1 ${SPATIALREASONING_TESTS2}
 			0
 			2
 			${INPUTDATA}/Seg1InputForRCC8Graph.tif
-			${INPUTDATA}/Seg2InputForRCC8Graph.tif			
+			${INPUTDATA}/Seg2InputForRCC8Graph.tif
 )
 
 ADD_TEST(srTvMultiSegToRCC8GraphFilter1WithOpti ${SPATIALREASONING_TESTS2}
@@ -171,7 +171,7 @@ ADD_TEST(srTvMultiSegToRCC8GraphFilter1WithOpti ${SPATIALREASONING_TESTS2}
 			1
 			2
 			${INPUTDATA}/Seg1InputForRCC8Graph.tif
-			${INPUTDATA}/Seg2InputForRCC8Graph.tif		
+			${INPUTDATA}/Seg2InputForRCC8Graph.tif
 )
 
 ADD_TEST(srTvMultiSegToRCC8GraphFilter2 ${SPATIALREASONING_TESTS2}
@@ -202,15 +202,15 @@ ADD_TEST(srTvMultiSegToRCC8GraphFilter2WithOpti ${SPATIALREASONING_TESTS2}
 
 # -------        otb::PolygonListToRCC8GraphFilter   --------------------------
 
-ADD_TEST(srTuPolygonListToRCC8GraphFilterNew ${SPATIALREASONING_TESTS2} 
+ADD_TEST(srTuPolygonListToRCC8GraphFilterNew ${SPATIALREASONING_TESTS2}
          otbPolygonListToRCC8GraphFilterNew)
 
 
-	 
-ADD_TEST(srTvPolygonListToRCC8GraphFilter ${SPATIALREASONING_TESTS2} 
+
+ADD_TEST(srTvPolygonListToRCC8GraphFilter ${SPATIALREASONING_TESTS2}
 	--compare-ascii ${TOL}
 		${BASELINE_FILES}/srTvPolygonListToRCC8GraphFilterOuptut.dot
-		${TEMP}/srTvPolygonListToRCC8GraphFilterOuptut.dot			  
+		${TEMP}/srTvPolygonListToRCC8GraphFilterOuptut.dot
          otbPolygonListToRCC8GraphFilter
 	 4
 	 ${TEMP}/srTvPolygonListToRCC8GraphFilterOuptut.dot
@@ -219,7 +219,7 @@ ADD_TEST(srTvPolygonListToRCC8GraphFilter ${SPATIALREASONING_TESTS2}
 	 ${INPUTDATA}/rcc8_mire3.png
 	 ${INPUTDATA}/rcc8_mire4.png)
 
-ADD_TEST(srTvPolygonListToRCC8GraphFilter2 ${SPATIALREASONING_TESTS2} 
+ADD_TEST(srTvPolygonListToRCC8GraphFilter2 ${SPATIALREASONING_TESTS2}
 	--compare-ascii ${TOL}
 		${BASELINE_FILES}/srTvPolygonListToRCC8GraphFilter2Ouptut.dot
 		${TEMP}/srTvPolygonListToRCC8GraphFilter2Ouptut.dot
@@ -231,7 +231,7 @@ ADD_TEST(srTvPolygonListToRCC8GraphFilter2 ${SPATIALREASONING_TESTS2}
 	 ${INPUTDATA}/Seg5InputForRCC8Graph.tif
 )
 
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ otbSPATIALREASONINGTests3 ~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -268,8 +268,8 @@ otbPolygonListToRCC8GraphFilter.cxx
 INCLUDE_DIRECTORIES("${OTBTesting_BINARY_DIR}")
 
 ADD_EXECUTABLE(otbSpatialReasoningTests1 otbSpatialReasoningTests1.cxx ${BasicSpatialReasoning_SRCS1})
-TARGET_LINK_LIBRARIES(otbSpatialReasoningTests1 OTBIO OTBSpatialReasoning)
+TARGET_LINK_LIBRARIES(otbSpatialReasoningTests1 OTBIO OTBSpatialReasoning OTBTesting)
 ADD_EXECUTABLE(otbSpatialReasoningTests2 otbSpatialReasoningTests2.cxx ${BasicSpatialReasoning_SRCS2})
-TARGET_LINK_LIBRARIES(otbSpatialReasoningTests2 OTBIO OTBSpatialReasoning)
+TARGET_LINK_LIBRARIES(otbSpatialReasoningTests2 OTBIO OTBSpatialReasoning OTBTesting)
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
