--- a/Examples/ChangeDetection/CMakeLists.txt
+++ b/Examples/ChangeDetection/CMakeLists.txt
@@ -124,7 +124,7 @@ ADD_TEST(KullbackLeiblerProfileChDetTest ${EXE_TESTS}
 )
 
 ADD_EXECUTABLE(otbChangeDetectionExamplesTests otbChangeDetectionExamplesTests.cxx)
-TARGET_LINK_LIBRARIES(otbChangeDetectionExamplesTests  ITKAlgorithms ITKStatistics OTBBasicFilters OTBCommon OTBDisparityMap OTBIO OTBSpatialReasoning OTBChangeDetection OTBFeatureExtraction  OTBLearning  OTBMultiScale)
+TARGET_LINK_LIBRARIES(otbChangeDetectionExamplesTests  ITKAlgorithms ITKStatistics OTBBasicFilters OTBCommon OTBDisparityMap OTBIO OTBSpatialReasoning OTBChangeDetection OTBFeatureExtraction  OTBLearning  OTBMultiScale OTBTesting)
 
 ENDIF( NOT OTB_DISABLE_CXX_TESTING AND BUILD_TESTING )
 
